[metadata]
name = joulupukki.api
summary = Joulupukki API
author = Thibault Cohen
author_email = thibault.cohen@gmail.com
license = GNU Affero General Public License
url = http://www.jlpk.org
description-file =
    README.rst

[files]
packages =
    joulupukki.api
    joulupukki.api.controllers
    joulupukki.api.controllers.v3
    joulupukki.api.libs
data_files =

[entry_points]
console_scripts =
    joulupukki-api = joulupukki.api:run

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[pbr]
warnerrors = true

[nosetests]
match=^test
where=joulupukki
nocapture=1
cover-package=joulupukki
cover-erase=1
